--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ATMFinder</string>
+     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+        AIzaSyD3hOeAeBE30y2Hlbg-_Id30jPMBZ2Bw1I
+    </string>
 </resources>
