--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="sort_dialog_box_title_error">Please select some option</string>
     <string name="gps_not_enabled">GPS Not Enabled</string>
     <string name="gps_turnon_msg">Do you want to turn on the GPS</string>
+    <string name="marker_you">YOU ARE HERE</string>
 
     <!--Admob ad details-->
     <string name="admob_app_id">ca-app-pub-6264665505773691~4596985763</string>
@@ -31,6 +32,7 @@
         <item>Reverse Alphabetical Order</item>
     </array>
 
+    <string name="about_app_title">About App</string>
     <string name="about_app_desc">
     <![CDATA[
     <b><font color="#ebebeb">About</font color></b><br>
