--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">ATMFinder</string>
-    <string name="developer_name">Thinktanki Apps</string>
+    <string name="developer_name"> © Thinktanki Apps</string>
     <string name="no_data_available">No ATMs are available Nearby,\nTry with different location or range</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
