--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="ok">OK</string>
     <string name="cancel">CANCEL</string>
     <string name="sort_dialog_box_title_error">Please select some option</string>
+    <string name="internet_dialog_msg">Internet is not available.\nCheck your internet connectivity and try again</string>
+    <string name="internet_dialog_title">Warning</string>
+    ""
     <string name="gps_not_enabled">GPS Not Enabled</string>
     <string name="gps_turnon_msg">Do you want to turn on the GPS</string>
     <string name="marker_you">YOU ARE HERE</string>
@@ -33,14 +36,15 @@
     </array>
 
     <string name="about_app_title">About App</string>
-    <string name="about_app_desc">
-    <![CDATA[
-    <b><font color="#ebebeb">About</font color></b><br>
-    DailyNews gets you the latest news updates in 6 different language.<br>
-    <b>हिन्दी,English,தமிழ்,తెలుగు,മലയാളം,ಕನ್ನಡ</b><br>
-    Without you having to go through all those lengthy newspapers and those loud and noisy news channels.<br>
-    Just install DailyNews and be the most updated with just a tap away.<br><br>
-    <b><font color="#ebebeb">Version:</b></font color>1.0.1<br>
-    ]]>
+    <string name="about_app_desc"><![CDATA[
+   ATMFinder is designed to find ATMs near you.<br>
+   It can be customize to sort ATMs by distance from your current location.<br>
+   List view will show all the ATMs within 1 km range and it can be customised.<br>
+   User can customize range from 1 to 10 kms.<br>
+   Map view will mark all the ATMs around you on a map.<br>
+   User can get directions to reach the selected ATM from your location.<br>
+   User can choose other location through PIN code or name and find ATMs in those Area.<br><br>
+   <b>Version:</b>1.0.0
+   ]]>
     </string>
 </resources>
